; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_receive-pack.c_delete_only.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_receive-pack.c_delete_only.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.command = type { i32, %struct.command* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.command*)* @delete_only to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @delete_only(%struct.command* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.command*, align 8
  %4 = alloca %struct.command*, align 8
  store %struct.command* %0, %struct.command** %3, align 8
  %5 = load %struct.command*, %struct.command** %3, align 8
  store %struct.command* %5, %struct.command** %4, align 8
  br label %6

6:                                                ; preds = %16, %1
  %7 = load %struct.command*, %struct.command** %4, align 8
  %8 = icmp ne %struct.command* %7, null
  br i1 %8, label %9, label %20

9:                                                ; preds = %6
  %10 = load %struct.command*, %struct.command** %4, align 8
  %11 = getelementptr inbounds %struct.command, %struct.command* %10, i32 0, i32 0
  %12 = call i32 @is_null_oid(i32* %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %9
  store i32 0, i32* %2, align 4
  br label %21

15:                                               ; preds = %9
  br label %16

16:                                               ; preds = %15
  %17 = load %struct.command*, %struct.command** %4, align 8
  %18 = getelementptr inbounds %struct.command, %struct.command* %17, i32 0, i32 1
  %19 = load %struct.command*, %struct.command** %18, align 8
  store %struct.command* %19, %struct.command** %4, align 8
  br label %6

20:                                               ; preds = %6
  store i32 1, i32* %2, align 4
  br label %21

21:                                               ; preds = %20, %14
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i32 @is_null_oid(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
